--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+
 @import url("https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap");
 
 /*---------------*/
@@ -6,26 +7,22 @@
 /*---------------*/
 
 :root {
-  --accent: 137, 185, 195;
   --dark: 51, 51, 51;
-  --brown: 87, 58, 40;
   --light: 243, 242, 239;
-  --light-blue: 198, 224, 225;
-  --light-brown: 191, 172, 146;
+  --dark-accent: 50, 89, 99;
+  --light-accent: 244, 121, 124;
 
-  --color-light-blue: rgb(var(--light-blue));
-  --color-light-brown: rgb(var(--light-brown));
-  --color-dark: rgb(var(--dark, 51, 51, 51));
-  --color-brown: rgb(var(--brown, 51, 51, 51));
-  --color-light: rgb(var(--light, 227, 227, 227));
-  --color-accent: rgb(var(--accent, 245, 81, 80));
+  --color-dark: rgb(var(--dark));
+  --color-light: rgb(var(--light));
+  --color-dark-accent: rgb(var(--dark-accent));
+  --color-light-accent: rgb(var(--light-accent));
 
   --max-content-width: 1140px;
 }
 
-/*---------------*/
-/* DEFAULT SETUP */
-/*---------------*/
+/*-----------------------------*/
+/*--------DEFAULT SETUP--------*/
+/*-----------------------------*/
 
 *,
 h1 {
@@ -40,6 +37,10 @@ body {
   font-size: 20px;
   font-family: "Lato", sans-serif;
 }
+
+/*-----------------------------*/
+/*--------LINE ON SIDES--------*/
+/*-----------------------------*/
 
 .line-on-sides {
   display: flex;
@@ -61,9 +62,9 @@ body {
   margin: 0 0 0 1em;
 }
 
-/*------------*/
-/* PARAGRAPHS */
-/*------------*/
+/*-----------------------------*/
+/*----------PARAGRAPHS---------*/
+/*-----------------------------*/
 p {
   font-weight: 400;
   font-size: 0.9em;
@@ -73,9 +74,9 @@ p {
   text-align: justify;
 }
 
-/*------------*/
-/*  BUTTONS   */
-/*------------*/
+/*-----------------------------*/
+/*-----------BUTTONS-----------*/
+/*-----------------------------*/
 .btn,
 .btn:link,
 .btn:visited {
@@ -89,29 +90,35 @@ p {
   min-width: 6em;
 
   box-shadow: 0px 1px 3px 0px rgba(var(--dark), 0.4);
-  background-color: var(--color-accent);
+  background-color: var(--color-light-accent);
   border: 2px solid var(--color-light);
 }
 
 .btn--secondary,
 .btn--secondary:link,
 .btn--secondary:visited {
-  background-color: transparent;
-
-  background: linear-gradient(
-    to right,
-    rgb(var(--light-brown)),
-    rgb(var(--light-brown))
-  );
+  background-color: var(--color-dark-accent);
 }
 
-/*------------*/
-/*  WELCOME   */
-/*------------*/
+/*-----------------------------*/
+/*-----------WELCOME-----------*/
+/*-----------------------------*/
 .welcome {
   display: flex;
+  position: relative;
 
   height: 100vh;
+  overflow: hidden;
+
+  background: url(img/welcome.jpg);
+  background-size: cover;
+}
+
+/* WELCOME CONTAINERS */
+.welcome__col {
+  max-width: calc(var(--max-content-width, 1140px) / 2);
+
+  margin: 0 auto;
 }
 
 .welcome__content,
@@ -124,28 +131,16 @@ p {
   align-items: center;
 }
 
-.welcome__col {
-  max-width: calc(var(--max-content-width, 1140px) / 2);
-
-  margin: 0 auto;
-}
-
 .welcome__content {
   color: var(--color-light);
-  background-color: var(--color-accent);
-  background: linear-gradient(
-      to right,
-      rgba(var(--light-brown), 0.9),
-      rgba(var(--light-brown), 0.9)
-    ),
-    url(img/texture.jpg);
-  background-size: cover;
+
+  background: rgba(var(--dark-accent), 0.9);
 }
 
 .welcome__image {
-  background: url(img/welcome-2.jpg);
-  background-size: cover;
   position: relative;
+
+  background: rgba(var(--light), 0.2);
 }
 
 .welcome__image::after {
@@ -159,20 +154,23 @@ p {
   box-shadow: -1px 0 2px 1px rgba(var(--dark), 0.2);
 }
 
+/* WELCOME CONTENT */
 .welcome__greeting {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   font-size: 1em;
+
   margin-bottom: 2em;
 }
 
 .welcome__cite {
   position: relative;
-  margin-top: 3em;
   margin-left: 50%;
   width: 50%;
+
+  margin-top: 3em;
 
   font-size: 0.7em;
   text-align: right;
@@ -192,12 +190,17 @@ p {
 
 .welcome__cite cite {
   display: block;
-  font-size: 0.9em;
   margin-top: 1em;
+
+  font-size: 0.9em;
+  line-height: 1.45em;
 }
+
+/* GREETING CONTENT */
 
 .my-greeting {
   font-size: 0.8em;
+  line-height: 1.2em;
 }
 
 .my-name,
@@ -214,9 +217,37 @@ p {
 .my-name {
   font-size: 2em;
   font-weight: 400;
+  line-height: 1.2em;
 }
 
 .my-title {
   font-size: 2.3em;
   font-weight: 300;
+  line-height: 1.2em;
+}
+
+/* WELCOME SHOW MORE */
+
+.welcome__show-more {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  transform: translateX(-50%);
+
+  font-size: 1em;
+}
+
+.welcome__show-more:link,
+.welcome__show-more:visited {
+  text-decoration: none;
+  color: var(--color-light);
+}
+
+.welcome__show-more .ion-chevron-down {
+  font-size: 2em;
 }
