--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,6 +35,7 @@ html,
 body {
   color: var(--color-dark);
   font-size: 20px;
+  font-weight: 300;
   font-family: "Lato", sans-serif;
 }
 
@@ -63,10 +64,18 @@ body {
 }
 
 /*-----------------------------*/
+/*-----------SECTIONS----------*/
+/*-----------------------------*/
+
+section {
+  padding: 7% 0;
+}
+
+/*-----------------------------*/
 /*----------PARAGRAPHS---------*/
 /*-----------------------------*/
+
 p {
-  font-weight: 400;
   font-size: 0.9em;
   line-height: 1.45em;
   text-indent: 1em;
@@ -83,6 +92,7 @@ p {
   color: var(--color-light);
   text-decoration: none;
   text-align: center;
+  font-weight: 400;
 
   display: inline-block;
   padding: 0.4em 0.6em;
@@ -232,6 +242,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: 400;
 
   position: absolute;
   bottom: 0;
@@ -250,4 +261,97 @@ p {
 
 .welcome__show-more .ion-chevron-down {
   font-size: 2em;
+}
+
+/*-----------------------------*/
+/*----------ABOUT ME-----------*/
+/*-----------------------------*/
+
+.about-me__container {
+  display: flex;
+  flex-direction: column;
+
+  max-width: var(--max-content-width, 1140px);
+
+  width: 70%;
+
+  margin: 0 auto;
+}
+
+.about-me__title {
+  font-size: 2em;
+  line-height: 1.45;
+  text-align: center;
+
+  font-weight: 400;
+
+  text-transform: uppercase;
+
+  margin-bottom: 0.8em;
+}
+
+.about-me__title::after {
+  display: block;
+  content: "";
+
+  width: 5em;
+  height: 0.1em;
+
+  margin: 0 auto;
+  margin-top: 0.4em;
+
+  background-color: var(--color-light-accent);
+}
+
+.about-me__content {
+  display: flex;
+
+  margin-top: 2%;
+}
+
+.about-me__details {
+  margin-right: 3%;
+
+  flex: 0 1 20%;
+}
+
+.about-me__details ul {
+  list-style: none;
+}
+
+.about-me__detail {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  margin-bottom: 0.5em;
+}
+
+.about-me__detail:first-child {
+  margin-bottom: 1em;
+}
+
+.about-me__detail span {
+  font-size: 0.9em;
+  line-height: 1.2em;
+}
+
+.about-me__detail span:first-child {
+  font-weight: 700;
+  margin-bottom: 0.2em;
+}
+
+.about-me__photo {
+  border: 4px solid var(--color-dark-accent);
+  width: 150px;
+  height: 150px;
+}
+
+.about-me__description {
+  flex: 1;
+
+  text-indent: 2em;
+  line-height: 1.45em;
+  text-align: justify;
 }
