--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,7 +68,40 @@ body {
 /*-----------------------------*/
 
 section {
+  display: flex;
+  flex-direction: column;
+
+  max-width: var(--max-content-width, 1140px);
+
+  width: 70%;
+
+  margin: 0 auto;
   padding: 7% 0;
+}
+
+section h2 {
+  font-size: 2em;
+  line-height: 1.45;
+  text-align: center;
+
+  font-weight: 400;
+
+  text-transform: uppercase;
+
+  margin-bottom: 1em;
+}
+
+section h2::after {
+  display: block;
+  content: "";
+
+  width: 5em;
+  height: 0.1em;
+
+  margin: 0 auto;
+  margin-top: 0.2em;
+
+  background-color: var(--color-light-accent);
 }
 
 /*-----------------------------*/
@@ -122,6 +155,7 @@ p {
 
   background: url(img/welcome.jpg);
   background-size: cover;
+  background-attachment: fixed;
 }
 
 /* WELCOME CONTAINERS */
@@ -267,56 +301,34 @@ p {
 /*----------ABOUT ME-----------*/
 /*-----------------------------*/
 
-.about-me__container {
-  display: flex;
-  flex-direction: column;
-
-  max-width: var(--max-content-width, 1140px);
-
-  width: 70%;
-
-  margin: 0 auto;
-}
-
-.about-me__title {
-  font-size: 2em;
-  line-height: 1.45;
-  text-align: center;
-
-  font-weight: 400;
-
-  text-transform: uppercase;
-
-  margin-bottom: 0.8em;
-}
-
-.about-me__title::after {
-  display: block;
-  content: "";
-
-  width: 5em;
-  height: 0.1em;
-
-  margin: 0 auto;
-  margin-top: 0.4em;
-
-  background-color: var(--color-light-accent);
-}
-
 .about-me__content {
   display: flex;
-
-  margin-top: 2%;
 }
 
 .about-me__details {
   margin-right: 3%;
 
   flex: 0 1 20%;
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
 }
 
 .about-me__details ul {
   list-style: none;
+}
+
+.about-me__detail,
+.about-me__photo {
+  margin-bottom: 0.5em;
+}
+
+.about-me__photo {
+  border: 4px solid var(--color-dark-accent);
+  width: 150px;
+  height: 150px;
 }
 
 .about-me__detail {
@@ -324,8 +336,6 @@ p {
   flex-direction: column;
 
   align-items: center;
-
-  margin-bottom: 0.5em;
 }
 
 .about-me__detail:first-child {
@@ -340,12 +350,6 @@ p {
 .about-me__detail span:first-child {
   font-weight: 700;
   margin-bottom: 0.2em;
-}
-
-.about-me__photo {
-  border: 4px solid var(--color-dark-accent);
-  width: 150px;
-  height: 150px;
 }
 
 .about-me__description {
