--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,9 @@
 /*-----------------------------*/
 
 *,
-h1 {
+h1,
+h2,
+h3 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -67,19 +69,23 @@ body {
 /*-----------SECTIONS----------*/
 /*-----------------------------*/
 
-section {
+.section {
   display: flex;
   flex-direction: column;
 
+  padding: 7% 0;
+}
+
+.section__title,
+.section__content {
   max-width: var(--max-content-width, 1140px);
 
   width: 70%;
 
   margin: 0 auto;
-  padding: 7% 0;
 }
 
-section h2 {
+.section__title {
   font-size: 2em;
   line-height: 1.45;
   text-align: center;
@@ -91,7 +97,7 @@ section h2 {
   margin-bottom: 1em;
 }
 
-section h2::after {
+.section__title::after {
   display: block;
   content: "";
 
@@ -298,14 +304,14 @@ p {
 }
 
 /*-----------------------------*/
-/*----------ABOUT ME-----------*/
+/*------------ABOUT------------*/
 /*-----------------------------*/
 
-.about-me__content {
+.about__content {
   display: flex;
 }
 
-.about-me__details {
+.about__details {
   margin-right: 3%;
 
   flex: 0 1 20%;
@@ -316,46 +322,99 @@ p {
   align-items: center;
 }
 
-.about-me__details ul {
+.about__details ul {
   list-style: none;
 }
 
-.about-me__detail,
-.about-me__photo {
+.about__detail,
+.about__photo {
   margin-bottom: 0.5em;
 }
 
-.about-me__photo {
+.about__photo {
   border: 4px solid var(--color-dark-accent);
   width: 150px;
   height: 150px;
 }
 
-.about-me__detail {
+.about__detail {
   display: flex;
   flex-direction: column;
 
   align-items: center;
 }
 
-.about-me__detail:first-child {
+.about__detail:first-child {
   margin-bottom: 1em;
 }
 
-.about-me__detail span {
+.about__detail span {
   font-size: 0.9em;
   line-height: 1.2em;
 }
 
-.about-me__detail span:first-child {
+.about__detail span:first-child {
   font-weight: 700;
   margin-bottom: 0.2em;
 }
 
-.about-me__description {
+.about__description {
   flex: 1;
 
   text-indent: 2em;
   line-height: 1.45em;
   text-align: justify;
+}
+
+/*-----------------------------*/
+/*----------SKILLS-----------*/
+/*-----------------------------*/
+
+.skills {
+  display: flex;
+
+  color: var(--color-light);
+  background: var(--color-dark-accent);
+}
+
+.skills__content {
+  display: flex;
+  justify-content: space-between;
+  justify-content: center;
+
+  flex-wrap: wrap;
+}
+
+.skills__category {
+  flex: 0 1 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.skills__category:not(:nth-child(3n + 0)) {
+  margin-right: 4%;
+}
+
+.skills__category h3 {
+  font-size: 1.4em;
+  line-height: 1.45em;
+  font-weight: 300;
+  text-align: center;
+
+  margin-bottom: 0.5em;
+}
+
+.skills__list {
+  list-style: none;
+}
+
+.skills__item {
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 0.2em;
+}
+
+.skills__item-strength {
+  font-size: 0.9em;
 }
