--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,7 +92,7 @@ body {
 
   text-transform: uppercase;
 
-  margin-bottom: 1em;
+  margin-bottom: 1.25em;
 }
 
 .section__title::after {
@@ -332,6 +332,13 @@ p {
 .navigation__link:visited {
   color: inherit;
   text-decoration: none;
+
+  transition: color 0.2s;
+}
+
+.navigation__link--selected:link,
+.navigation__link--selected:visited {
+  color: var(--color-light-accent);
 }
 
 .navigation__show-more,
@@ -387,15 +394,16 @@ p {
   list-style: none;
 }
 
-.about__detail,
-.about__photo {
+.about__detail {
   margin-bottom: 0.5em;
 }
 
 .about__photo {
-  border: 4px solid var(--color-dark-accent);
   width: 150px;
   height: 150px;
+
+  margin-bottom: 1em;
+  border-radius: 50%;
 }
 
 .about__detail {
@@ -499,4 +507,136 @@ p {
 .ion-flash--disabled {
   color: var(--color-light);
   opacity: 0.5;
+}
+
+/*-----------------------------*/
+/*-----------CAREER------------*/
+/*-----------------------------*/
+
+.career__content {
+  width: 60%;
+}
+
+.career__stages {
+  position: relative;
+}
+
+.career__stages::before {
+  content: "";
+  top: 0;
+  left: 25%;
+  bottom: 0;
+  width: 0.2em;
+
+  display: block;
+  position: absolute;
+
+  transform: translateX(-50%);
+  background: linear-gradient(to bottom, #eee 90%, rgba(255, 255, 255, 0) 100%);
+}
+
+.career__stage {
+  display: flex;
+
+  position: relative;
+
+  margin-bottom: 4%;
+}
+
+.career__stage::before,
+.career__stage:first-child::after {
+  content: "";
+  top: 0;
+  left: 25%;
+  width: 0.8em;
+  height: 0.8em;
+  display: block;
+  position: absolute;
+
+  border: 0.25em solid var(--color-light-accent);
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background: #fff;
+}
+
+.career__stage:first-child::after {
+  top: 0.35em;
+  width: 0.1em;
+  height: 0.1em;
+
+  background: var(--color-light-accent);
+
+  transform: translateX(-50%);
+}
+
+.career__company {
+  flex: 0 1 25%;
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  padding-right: 5%;
+}
+
+.career__company p {
+  text-indent: 0;
+  text-align: center;
+}
+
+.career__company img {
+  width: 60px;
+  height: 60px;
+
+  margin-bottom: 1em;
+  border-radius: 50%;
+}
+
+.career__company-name {
+  font-weight: 400;
+}
+
+.career__position {
+  flex: 0 1 75%;
+
+  display: flex;
+  flex-direction: column;
+
+  padding-left: 5%;
+}
+
+.career__position h4 {
+  margin-bottom: 0.5em;
+  color: var(--color-dark-accent);
+}
+
+.career__technologies {
+  list-style: none;
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.career__responsibilities {
+  list-style: disc;
+
+  padding-left: 1em;
+  margin-bottom: 1em;
+
+  font-size: 0.9em;
+  line-height: 1.45em;
+}
+
+.career__technologies li {
+  margin-right: 0.5em;
+  margin-bottom: 0.3em;
+  padding: 0.2em 0.6em;
+
+  border: 1px solid var(--color-dark-accent);
+  color: var(--color-dark-accent);
+  border-radius: 16px;
+
+  font-size: 0.9em;
+  line-height: 1;
 }
