--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,7 +36,8 @@ body {
   color: var(--color-dark);
   font-size: 20px;
   font-weight: 300;
-  font-family: "Lato", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 /*-----------------------------*/
@@ -62,6 +63,117 @@ body {
 .line-on-sides:after {
   margin: 0 0 0 1em;
 }
+
+/*-----------------------------*/
+/*-----------CHECKBOX----------*/
+/*-----------------------------*/
+.checkbox {
+  display: inline-flex;
+  position: relative;
+
+  cursor: pointer;
+  user-select: none;
+
+  font-size: 1em;
+}
+
+.checkbox::before {
+  display: inline-flex;
+  margin-right: 0.2em;
+  content: "";
+  height: 1em;
+  width: 1em;
+}
+
+/* Hide the browser's default radio button */
+.checkbox input {
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  height: 1em;
+  width: 1em;
+  line-height: 1em;
+  z-index: 1;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1em;
+  width: 1em;
+  background: #fff;
+  border: 1px solid var(--color-dark-accent);
+  z-index: 0;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox:hover input ~ .checkmark {
+  border-color: var(--color-light-accent);
+}
+
+/* When the radio button is checked, add a blue background */
+.checkbox input:checked ~ .checkmark {
+  background: #fff;
+  border: 0.1em solid var(--color-light-accent);
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  position: absolute;
+  display: none;
+  content: "";
+}
+
+/* Show the indicator (dot/circle) when checked */
+.checkbox input:checked ~ .checkmark:after {
+  display: inline-flex;
+}
+
+/*-----------------------------*/
+/*-----------CAROUSEL----------*/
+/*-----------------------------*/
+.carousel {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.carousel__items {
+  list-style: none;
+  display: flex;
+  width: 300%;
+  filter: blur(0);
+  animation: carousel 10s alternate infinite ease-in-out;
+}
+
+.carousel__item {
+  flex: 0 1 33.333%;
+}
+/* 
+@keyframes carousel {
+  0% {
+    transform: translate(0, 0);
+    filter: blur(0);
+  }
+
+  33.33% {
+    transform: translate(-33.33%, 0);
+    filter: blur(0);
+  }
+
+  66.66% {
+    transform: translate(-66.66%, 0);
+    filter: blur(0);
+  }
+
+  100% {
+    transform: translate(-99.99%, 0);
+    filter: blur(0);
+  }
+} */
 
 /*-----------------------------*/
 /*-----------SECTIONS----------*/
@@ -516,11 +628,17 @@ p {
 
 .skills__item p {
   text-indent: 0;
+  margin-right: 1em;
 }
 
 .skills__item-strength {
+  display: inline-flex;
   font-size: 0.9em;
   color: var(--color-light-accent);
+}
+
+.skills__item-strength span:not(:last-child) {
+  margin-right: 0.2em;
 }
 
 .ion-flash--disabled {
@@ -536,13 +654,44 @@ p {
   width: 60%;
 }
 
-.career__stages {
+.career__group:not(:last-child) {
+  margin-bottom: 2em;
+}
+
+.career__groups {
+  list-style: none;
+}
+
+.career__group-title {
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.2em;
+
+  text-align: center;
+  text-transform: uppercase;
+
+  margin-bottom: 1em;
+}
+
+.career__group-title::after {
+  display: block;
+  content: "";
+  width: 5em;
+  height: 0.05em;
+  margin: 0 auto;
+  margin-top: 0.1em;
+  background-color: var(--color-light-accent);
+}
+
+.career__work-stages,
+.career__education-stages {
   position: relative;
 }
 
-.career__stages::before {
+.career__work-stages::before,
+.career__education-stages::before {
   content: "";
-  top: 0.2em;
+  top: 0;
   left: 25%;
   bottom: 0;
   width: 0.2em;
@@ -554,7 +703,8 @@ p {
   background: linear-gradient(to bottom, #eee 90%, rgba(255, 255, 255, 0) 100%);
 }
 
-.career__stage {
+.career__work-stage,
+.career__education-stage {
   display: flex;
   flex-wrap: wrap;
 
@@ -563,7 +713,8 @@ p {
   margin-bottom: 5%;
 }
 
-.career__stage:not(:first-child)::before {
+.career__work-stage:not(:first-child)::before,
+.career__education-stage::before {
   content: "";
   top: 0;
   left: 25%;
@@ -578,14 +729,14 @@ p {
   background: #fff;
 }
 
-.career__stage:first-child::after {
+.career__work-stage:first-child::after {
   content: "";
   display: block;
 
   width: 1.8em;
   height: 1.8em;
 
-  top: 0;
+  top: -0.2em;
   left: 25%;
   position: absolute;
   transform: translateX(-50%);
@@ -594,7 +745,8 @@ p {
   background-size: cover;
 }
 
-.career__company {
+.career__company,
+.career__institution {
   flex: 0 1 25%;
 
   display: flex;
@@ -605,24 +757,26 @@ p {
   padding-right: 5%;
 }
 
-.career__company p {
+.career__company p,
+.career__institution p {
   text-indent: 0;
   text-align: center;
 }
 
-.career__company img {
-  width: 60px;
-  height: 60px;
+.career__company img,
+.career__institution img {
+  width: 100px;
+  height: 100px;
 
   margin-bottom: 1em;
-  border-radius: 50%;
 }
 
 .career__company-name {
   font-weight: 400;
 }
 
-.career__position {
+.career__position,
+.career__education {
   flex: 0 1 75%;
 
   display: flex;
@@ -631,9 +785,24 @@ p {
   padding-left: 5%;
 }
 
-.career__position h4 {
+.career__position h4,
+.career__education h4 {
+  line-height: 1.45em;
   margin-bottom: 0.5em;
   color: var(--color-dark-accent);
+}
+
+.career__education-degree,
+.career__education-field-of-study {
+  text-indent: 0;
+}
+
+.career__education-degree {
+  font-weight: 400;
+}
+
+.career__education-degree::after {
+  content: ",";
 }
 
 .career__technologies {
