--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "@glidejs/glide/dist/css/glide.core.min.css";
 
 /*---------------*/
 /* ACCENT COLORS */
@@ -38,6 +39,21 @@ body {
   font-weight: 300;
   /* font-family: "Roboto", sans-serif; */
   font-family: "Roboto Condensed", sans-serif;
+}
+
+/*-----------------------------*/
+/*-----------GLIDER------------*/
+/*-----------------------------*/
+.glide--swipeable {
+  cursor: grab;
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
+.glide--dragging {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
 }
 
 /*-----------------------------*/
@@ -131,49 +147,6 @@ body {
 .checkbox input:checked ~ .checkmark:after {
   display: inline-flex;
 }
-
-/*-----------------------------*/
-/*-----------CAROUSEL----------*/
-/*-----------------------------*/
-.carousel {
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-.carousel__items {
-  list-style: none;
-  display: flex;
-  width: 300%;
-  filter: blur(0);
-  animation: carousel 10s alternate infinite ease-in-out;
-}
-
-.carousel__item {
-  flex: 0 1 33.333%;
-}
-/* 
-@keyframes carousel {
-  0% {
-    transform: translate(0, 0);
-    filter: blur(0);
-  }
-
-  33.33% {
-    transform: translate(-33.33%, 0);
-    filter: blur(0);
-  }
-
-  66.66% {
-    transform: translate(-66.66%, 0);
-    filter: blur(0);
-  }
-
-  100% {
-    transform: translate(-99.99%, 0);
-    filter: blur(0);
-  }
-} */
 
 /*-----------------------------*/
 /*-----------SECTIONS----------*/
@@ -654,12 +627,18 @@ p {
   width: 60%;
 }
 
-.career__group:not(:last-child) {
-  margin-bottom: 2em;
-}
-
 .career__groups {
   list-style: none;
+  display: block;
+  width: 100%;
+}
+
+.career__group {
+  display: block;
+}
+
+.career__group:not(:last-child) {
+  margin-bottom: 2.5em;
 }
 
 .career__group-title {
@@ -676,7 +655,7 @@ p {
 .career__group-title::after {
   display: block;
   content: "";
-  width: 5em;
+  width: 10em;
   height: 0.05em;
   margin: 0 auto;
   margin-top: 0.1em;
@@ -833,4 +812,82 @@ p {
 
   font-size: 0.9em;
   line-height: 1;
+}
+
+.career__recommendation {
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column-reverse;
+
+  align-items: center;
+
+  font-size: 1em;
+  text-indent: 1em;
+  line-height: 1.45em;
+  text-align: center;
+}
+
+.career__recommendation-details:link,
+.career__recommendation-details:visited {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  margin-bottom: 1em;
+
+  text-decoration: none;
+
+  color: var(--color-dark);
+}
+
+.career__recommendation-details:link img,
+.career__recommendation-details:visited img {
+  width: 90px;
+  height: 90px;
+  border: 2px solid var(--color-dark-accent);
+  border-radius: 50%;
+  margin-bottom: 1em;
+}
+
+.career__recommendation-details:link h4,
+.career__recommendation-details:link p,
+.career__recommendation-details:visited h4,
+.career__recommendation-details:visited p {
+  text-indent: 0;
+  text-align: center;
+  line-height: 1.45em;
+}
+
+.career__recommendation-details:link h4,
+.career__recommendation-details:visited h4 {
+  font-style: normal;
+  margin-bottom: 0.5em;
+  color: var(--color-dark-accent);
+}
+
+.career__recommendation-details:link:hover h4,
+.career__recommendation-details:visited:hover h4 {
+  text-decoration: underline;
+}
+
+/*-----------------------------*/
+/*-----------PROJECTS-----------*/
+/*-----------------------------*/
+
+.projects {
+  position: relative;
+}
+
+.projects::before {
+  position: absolute;
+  display: block;
+  content: "";
+  top: 0;
+  left: 50%;
+  width: 90%;
+  height: 0.2em;
+  transform: translateX(-50%);
+  background-color: var(--color-light);
 }
