--- a/src/css/main.css
+++ b/src/css/main.css
@@ -225,6 +225,8 @@ body {
   background-color: var(--color-light);
   border: 2px solid var(--color-dark-accent);
   outline: none;
+  -webkit-appearance: none;
+  border-radius: 0;
 }
 
 /*-----------------------------*/
@@ -431,7 +433,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  height: 2.8em;
   width: 100%;
 }
 
@@ -451,6 +453,7 @@ p {
 }
 
 .navigation__links ul > li {
+  display: flex;
   margin: 0 5%;
 }
 
@@ -511,13 +514,19 @@ p {
 /*------------ABOUT------------*/
 /*-----------------------------*/
 
-.about__details {
-  margin-right: 5%;
+.about {
+  /* height: 100vh; */
+}
 
-  flex: 0 1 20%;
+.about__content {
+  justify-content: center;
+  width: 60%;
+}
+
+.about__details {
+  margin-bottom: 5%;
 
   display: flex;
-  flex-direction: column;
 
   align-items: center;
 }
@@ -534,8 +543,10 @@ p {
   width: 150px;
   height: 150px;
 
-  margin-bottom: 1em;
+  margin-right: 1em;
   border-radius: 50%;
+
+  border: 4px solid var(--color-dark-accent);
 }
 
 .about__detail {
@@ -560,11 +571,11 @@ p {
 }
 
 .about__description {
-  flex: 1;
-
   text-indent: 2em;
   line-height: 1.45em;
   text-align: justify;
+  font-size: 1em;
+  margin-bottom: 2em;
 }
 
 /*-----------------------------*/
@@ -938,6 +949,7 @@ p {
 }
 
 .projects__item figure {
+  flex: 1;
   position: relative;
   overflow: hidden;
 }
