--- a/src/css/welcome/welcome.query.css
+++ b/src/css/welcome/welcome.query.css
@@ -37,7 +37,7 @@
 @media (max-width: 767px) {
   .welcome {
     padding: 5% 5% 4.5em 5%;
-    background: linear-gradient(
+    background-image: linear-gradient(
         rgba(var(--dark-accent), 0.9),
         rgba(var(--dark-accent), 0.9)
       ),
