--- a/src/css/nav/nav.css
+++ b/src/css/nav/nav.css
@@ -1,4 +1,4 @@
-.navigation {
+.nav {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -14,7 +14,7 @@
   transition: background-color 0.3s;
 }
 
-.navigation__title {
+.nav__title {
   /*TODO*/
   text-indent: 0;
   font-size: 1em;
@@ -22,16 +22,16 @@
   line-height: 1.25em;
 }
 
-.navigation__content {
+.nav__content {
   display: flex;
 }
 
-.navigation__links {
+.nav__links {
   display: none;
 }
 
-.navigation__chevron:link,
-.navigation__chevron:visited {
+.nav__chevron:link,
+.nav__chevron:visited {
   display: flex;
   margin: 0.2em 0.6em;
 
@@ -42,86 +42,86 @@
   text-decoration: none;
 }
 
-.navigation__link:link,
-.navigation__link:visited {
+.nav__link:link,
+.nav__link:visited {
   color: inherit;
   text-decoration: none;
   transition: color 0.2s;
 }
 
-.navigation__link--selected:link,
-.navigation__link--selected:visited {
+.nav__link--selected:link,
+.nav__link--selected:visited {
   color: var(--color-light-accent);
 }
 
-.navigation--top,
-.navigation--bottom {
+.nav--top,
+.nav--bottom {
   z-index: 9999;
   position: fixed;
   background-color: var(--color-dark);
   box-shadow: 0 0px 4px var(--color-black);
 }
 
-.navigation--top {
+.nav--top {
   top: 0;
   bottom: initial;
 }
 
-.navigation--bottom {
+.nav--bottom {
   bottom: 0;
   display: none;
   padding: 0.2em 0;
 }
 
-.navigation--top .navigation__title {
+.nav--top .nav__title {
   display: none;
 }
 
-.navigation--top .navigation__content {
+.nav--top .nav__content {
   width: 100%;
   height: 2.8em;
   align-items: center;
   justify-content: center;
 }
 
-.navigation--top .navigation__links {
+.nav--top .nav__links {
   display: flex;
   list-style: none;
 
   flex: 0 1 calc(45% - 0.6em);
 }
 
-.navigation--top .navigation__links:first-child {
+.nav--top .nav__links:first-child {
   justify-content: flex-end;
 }
 
-.navigation--top .navigation__links:last-child {
+.nav--top .nav__links:last-child {
   justify-content: flex-start;
 }
 
-.navigation--top .navigation__links > li {
+.nav--top .nav__links > li {
   margin: 0 5%;
 }
 
-.navigation--top .navigation__link::before {
+.nav--top .nav__link::before {
   content: "/";
 }
 
-.navigation--top .navigation__link:link,
-.navigation--top .navigation__link:visited {
+.nav--top .nav__link:link,
+.nav--top .nav__link:visited {
   font-size: 1.25em;
   line-height: 1.25em;
   letter-spacing: 0.1em;
 }
 
-.navigation--bottom .navigation__links {
+.nav--bottom .nav__links {
   width: 100%;
   display: flex;
   list-style: none;
   justify-content: space-around;
 }
 
-.navigation--bottom .navigation__link {
+.nav--bottom .nav__link {
   font-size: 1em;
   font-weight: 400;
   display: inline-flex;
@@ -129,18 +129,18 @@
   flex-direction: column;
 }
 
-.navigation--bottom .navigation__link--selected:link,
-.navigation--bottom .navigation__link--selected:visited {
+.nav--bottom .nav__link--selected:link,
+.nav--bottom .nav__link--selected:visited {
   font-weight: 600;
 }
 
-.navigation--bottom .navigation__link-icon {
+.nav--bottom .nav__link-icon {
   font-size: 1.25em;
   line-height: 1.25em;
   text-transform: capitalize;
 }
 
-.navigation--bottom .navigation__link-text {
+.nav--bottom .nav__link-text {
   font-size: 0.6em;
   line-height: 1.25em;
   text-transform: capitalize;
