Add noscript support and fix layout bugs

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -164,3 +164,11 @@ p {
   opacity: 0.5;
   color: var(--color-light);
 }
+
+.lozad:not([data-loaded]) {
+  padding: 5%;
+}
+
+.lozad-hidden {
+  display: none;
+}
