--- a/static/css/skills/skills.css
+++ b/static/css/skills/skills.css
@@ -49,11 +49,26 @@
 
 .skills__item {
   display: flex;
+  padding: 0 0.1em;
+  align-items: center;
   margin-bottom: 0.2em;
   justify-content: space-between;
+
+  transform: scale(1);
+  background-color: transparent;
+  transition: transform 0.5s, background-color 0.5s;
+
+  will-change: transform;
+}
+
+.skills__item:hover {
+  transform: scale(1.05);
+  background-color: rgba(var(--black), 0.1);
 }
 
 .skills__item p {
+  /*TODO*/
+  margin: 0;
   text-indent: 0;
   margin-right: 1em;
 }
