--- a/static/css/contacts/contacts.css
+++ b/static/css/contacts/contacts.css
@@ -28,7 +28,7 @@
 
 .socials li {
   display: flex;
-  margin-bottom: 1em;
+  margin-bottom: 0.8em;
 }
 
 .socials__link:link,
@@ -37,6 +37,35 @@
   align-items: center;
   text-decoration: none;
   color: var(--color-light);
+
+  padding-bottom: 0.2em;
+  transition: color 0.5s;
+}
+
+.socials__link:link:hover,
+.socials__link:visited:hover {
+  position: relative;
+  color: var(--color-light-accent);
+}
+
+.socials__link:link:before,
+.socials__link:visited:before {
+  content: "";
+  width: 100%;
+  height: 0.1em;
+
+  left: 0;
+  bottom: 0;
+  display: block;
+  position: absolute;
+
+  background-color: transparent;
+  transition: background-color 1s;
+}
+
+.socials__link:link:hover::before,
+.socials__link:link:visited::before {
+  background-color: currentColor;
 }
 
 .socials__link-icon {
