--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -106,7 +106,7 @@
   outline: none;
   background-color: var(--color-light);
   border: 0.1em solid var(--color-dark-accent);
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 /*-----------------------------*/
@@ -143,7 +143,21 @@ p {
 
   border: 0.1em solid var(--color-light);
   background-color: var(--color-light-accent);
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.4);
+
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+
+  transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+}
+
+.btn:hover,
+.btn:link:hover,
+.btn:visited:hover {
+  animation-name: btnUpDown;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in-out;
+
+  background-color: var(--color-active);
 }
 
 .btn:last-child {
@@ -171,4 +185,18 @@ p {
 
 .lozad-hidden {
   display: none;
+}
+
+@keyframes btnUpDown {
+  from {
+    transform: translateY(0%);
+  }
+
+  50% {
+    transform: translateY(-10%);
+  }
+
+  to {
+    transform: translateY(0%);
+  }
 }
