--- a/static/css/welcome/welcome.query.css
+++ b/static/css/welcome/welcome.query.css
@@ -1,3 +1,7 @@
+.welcome {
+  background-image: url(../img/welcome.jpg);
+}
+
 @media (min-width: 1281px) {
   .welcome {
     background-attachment: fixed;
@@ -81,6 +85,6 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
   .welcome {
-      height: auto;
+    height: auto;
   }
 }
