--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -148,6 +148,7 @@ p {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 
   transition: background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+  will-change: transform; 
 }
 
 .btn:hover,
